--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
         <section class="grille">
         <article class="accueillogo">
           <!-- Action JavaScript MM.takeOff()-->
-            <div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="Saisir une URL préconfigurée" size="10"><button id="btnCode" onclick="URLPreconfig()"><img src="img/iconfinder_takeoff.png"></button>
+            <div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="Saisir une URL préconfigurée" size="10"><button id="btnCode" onclick="URLPreconfig()"><img src="img/iconfinder_takeoff.png" alt="Saisir une URL ou un code"></button>
               <script>
               function URLPreconfig() {
             var URLCode = document.getElementById("inputCode").value;
@@ -104,7 +104,13 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 alert("Veuillez saisir une URL")
             }
             else {
-            window.open(URLCode, "projection", "width=1080,height=720")
+              if (example.includes("code=")) {
+              	var CodeSaisiBrut = document.getElementById("inputCode").value;
+                var CodeSaisiNet = CodeSaisiBrut.replace('code=','');
+                window.open(URLCode, "projection", "width=1080,height=720");
+              } else {
+              	window.open(URLCode, "projection", "width=1080,height=720");
+              }
                 }
 
         }
