--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
               if (example.includes("code=")) {
               	var CodeSaisiBrut = document.getElementById("inputCode").value;
                 var CodeSaisiNet = CodeSaisiBrut.replace('code=','');
-                window.open(URLCode, "projection", "width=1080,height=720");
+                window.open("https://s.42l.fr/" + CodeSaisiNet , "projection", "width=1080,height=720");
               } else {
               	window.open(URLCode, "projection", "width=1080,height=720");
               }
