--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
                 </select>
                 <audio src="" autoplay id="soundplayer"></audio>
             </fieldset>
+            <fieldset id="onlinechoice">
+                <legend>Répondre en ligne</legend>
+                <input type="radio" class="radio" name="online" value="no" checked="true" onclick="MM.setOnlineState(this.value)"> Non
+                <input type="radio" class="radio" name="online" value="yes" onclick="MM.setOnlineState(this.value)"> Oui
+            </fieldset>
             <br>
             <fieldset>
                 <legend>Enoncé</legend>
@@ -249,11 +254,6 @@
                     <input type="radio" class="radio" name="facetoface" value="n" checked="true" onclick="MM.setFacetoFace('n');"> Normal<br>
                     <input type="radio" class="radio" name="facetoface" value="y" onclick="MM.setFacetoFace('y');"> <img src="img/facetoface.png" title="Face à face sur une tablette">
                 </div>
-                <fieldset id="onlinechoice">
-                    <legend>Répondre en ligne</legend>
-                    <input type="radio" class="radio" name="online" value="no" checked="true" onclick="MM.setOnlineState(this.value)"> Non
-                    <input type="radio" class="radio" name="online" value="yes" onclick="MM.setOnlineState(this.value)"> Oui
-                </fieldset>
                 </fieldset><br>
             <fieldset>
                 <legend>Fin de diaporama</legend>
@@ -362,7 +362,7 @@
             </fieldset>
             <fieldset>
                 <legend>Position corrigé</legend>
-                <input type="radio" class="radio" name="ceintcorrpos" value="fin" selected="true"> à part <input type="radio" class="radio" name="ceintcorrpos" value="apres"> après ceinture
+                <input type="radio" class="radio" name="ceintcorrpos" value="fin" selected> à part <input type="radio" class="radio" name="ceintcorrpos" value="apres"> après ceinture
             </fieldset>
             <fieldset>
                 <legend>Pied des colonnes</legend>
@@ -370,7 +370,7 @@
             </fieldset>
             <fieldset>
                 <legend>Orientation page</legend>
-                <input type="radio" class="radio" name="ceintorientation" value="portrait" selected="true"> portrait <input type="radio" class="radio" name="ceintorientation" value="landscape"> paysage
+                <input type="radio" class="radio" name="ceintorientation" value="portrait" selected> portrait <input type="radio" class="radio" name="ceintorientation" value="landscape"> paysage
             </fieldset>
             <section>
                 <button class="button--primary beaubutton" onclick="MM.createCeintureSheet();">Générer</button>
