Amélioration saisie et correction de nombreux exercices en mode online

--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
     <meta name="theme-color" content="#ffffff" />
     <link href="js/libs/katex/katex.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/knacss.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="css/bulma-steps.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/bulma-steps.min.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/mathsmentales.min.css?v=5" type="text/css" media="screen" />
     <link rel="stylesheet" href="js/libs/JSXGprah1.2.2/jsxgraph.css" type="text/css" />
     <script src="js/libs/katex/katex.min.js" type="text/javascript" defer></script>
-    <script src="js/libs/asciimath2tex/asciimath2tex.min.js"></script>
-    <script src="js/libs/mathlive/mathlive.min.js"></script>
-    <script src="js/libs/algebrite/algebrite.bundle-for-browser.js" type="text/javascript" defer></script>
+    <script src="js/libs/asciimath2tex/asciimath2tex.min.js" defer></script>
+    <script src="js/libs/mathlive/mathlive.min.js" defer></script>
+    <script src="js/libs/algebrite/algebrite.bundle-for-browser.min.js" type="text/javascript" defer></script>
     <script src="js/libs/bigjs/big.min.js" type="text/javascript" defer></script>
-    <script src="js/libs/sortable/Sortable.js"></script>
-    <script src="js/libs/seedrandom/seedrandom.min.js" type="text/javascript"></script>
-    <script src="js/libs/JSXGprah1.2.2/jsxgraphcore.js"></script>
+    <script src="js/libs/sortable/Sortable.min.js" defer></script>
+    <script src="js/libs/seedrandom/seedrandom.min.js" type="text/javascript" defer></script>
+    <script src="js/libs/JSXGprah1.2.2/jsxgraphcore.min.js" defer></script>
     <!--<script src="js/libs/scratchblocks/scratchblocks-v3.4-min.js"></script>-->
-    <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
-    <script src="js/libs/qrious.min.js"></script>
-    <script src="js/libs/underscore-min.js"></script>
-    <script src="js/libs/kas.js" defer></script>
-    <script src="js/MM1toMM2.min.js"></script>
-    <script src="js/libs/vanilla-picker/vanilla-picker.min.js"></script>
+    <script src="js/libs/chartjs/Chart.bundle.min.js" defer></script>
+    <script src="js/libs/qrious.min.js" defer></script>
+    <script src="js/libs/underscore-min.js" defer></script>
+    <script src="js/libs/kas.min.js" defer></script>
+    <script src="js/MM1toMM2.min.js" defer></script>
+    <script src="js/libs/vanilla-picker/vanilla-picker.min.js" defer></script>
     <script src="js/lib.mathsmentales.js?v=27" type="text/javascript" defer></script>
 </head>
 <body>
     <div id="app-container">
 <header>
-    <a id="btnaccueil" numero="#tab-accueil" class="logo tabs-menu-link"><img numero="#tab-accueil" src="img/android-icon-48x48.png" alt="logo" width="32" /></a>
+    <a id="btnaccueil" numero="#tab-accueil" class="logo tabs-menu-link"><img numero="#tab-accueil" src="img/logocm32x32.png" alt="logo" /></a>
     <!--<input type="checkbox" id="btnnav">
     <label for="btnnav">
         <img src="img/iconfinder_menu-alt_134216.svg">
@@ -93,7 +93,7 @@
         <section class="grille">
         <article class="accueillogo">
             <!--<div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="J'ai un code" size="10"><button id="btnCode" onclick="MM.takeOff()"><img src="img/iconfinder_takeoff.png"></button></div>-->
-            <img src="img/logocm.png" width="160" class="logoMM">
+            <img src="img/logocm160x132.png" class="logoMM">
             <p>
                 <b>Automatismes et calcul mental</b> à données aléatoires sous forme de diaporamas, réponses en ligne, feuilles d'exercices, cartes flash, dominos, duels en ligne... (<a href="old/">ancienne version</a>)
              </p>
@@ -462,7 +462,7 @@
         <p></p>
         <p>Tous les documents ci-dessous sont sous licence libre GPL</p>
         <h2 class="sg-title">Documentation de MathsMentales</h2>
-        <p>En attendant des tutos en vidéo, voici une courte documentation de MathsMentales : <a href="docs/MathsMentales documentation.pdf" target="_blank">Télécharger le pdf</a></p>
+        <p>En attendant des tutos en vidéo, voici une courte documentation de MathsMentales : <a href="docs/MathsMentales documentation.pdf" rel="noreferrer" target="_blank">Télécharger le pdf</a></p>
         <h2 class="sg-title">Livrets de Ceinture de calcul mental</h2>
         <p>Un descriptif plus approfondi est donné sur la page <a href="http://olibo.jeduque.net/ceintures-de-calcul-mental-au-college/">ceintures de calcul mental</a> de mon site.</p>
         <ul>
