Modif beeps : joue pendant décompte et sur première diapo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="js/libs/kas.min.js" defer></script>
     <script src="js/MM1toMM2.min.js" defer></script>
     <script src="js/libs/vanilla-picker/vanilla-picker.min.js" defer></script>
-    <script src="js/lib.mathsmentales.js?v=28" type="text/javascript" defer></script>
+    <script src="js/lib.mathsmentales.js?v=29" type="text/javascript" defer></script>
 </head>
 <body>
     <div id="app-container">
@@ -534,5 +534,20 @@
 <!--<div id="figures-container">
 
 </div>-->
+<!-- Matomo -->
+<script>
+    var _paq = window._paq = window._paq || [];
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function() {
+      var u="https://matomo.jeduque.net/";
+      _paq.push(['setTrackerUrl', u+'matomo.php']);
+      _paq.push(['setSiteId', '2']);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+    })();
+  </script>
+  <!-- End Matomo Code -->  
 </body>
 </html>
