--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     <link rel="stylesheet" href="css/knacss.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/bulma-steps.min.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/mathsmentales.css?v=6" type="text/css" media="screen" />
-    <link rel="stylesheet" href="css/mathsmentales.scss" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/mem-projector.scss" type="text/css" media="screen" />
     <link rel="stylesheet" href="js/libs/JSXGprah1.2.2/jsxgraph.css" type="text/css" />
     <script src="js/libs/katex/katex.min.js" type="text/javascript" defer></script>
     <script src="js/libs/asciimath2tex/asciimath2tex.min.js" defer></script>
@@ -307,7 +307,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     <h3>L'activité a été copiée dans l'historique</h3>
                     <a id="LinkTH" onclick="Close()">Fermer</a>
                     <script>
-                        function AnnonceHistorique() {
+                        function LinkTH() {
                             document.getElementById("ToastHistory").style.display("none")
                         }
                     </script>
