--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     <h3>L'activité a été copiée dans l'historique</h3>
                     <a id="LinkTH" onclick="Close()">Fermer</a>
                     <script>
-                        function LinkTH() {
+                        function Close() {
                             document.getElementById("ToastHistory").style.display("none")
                         }
                     </script>
