--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     <link rel="stylesheet" href="css/knacss.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/bulma-steps.min.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/mathsmentales.css?v=6" type="text/css" media="screen" />
-    <link rel="stylesheet" href="css/mem-projector.scss" type="text/css" media="screen" />
     <link rel="stylesheet" href="js/libs/JSXGprah1.2.2/jsxgraph.css" type="text/css" />
     <script src="js/libs/katex/katex.min.js" type="text/javascript" defer></script>
     <script src="js/libs/asciimath2tex/asciimath2tex.min.js" defer></script>
@@ -295,24 +294,9 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 <span class="tooltiptext">Copie l'adresse de<br>l'activité dans<br>le presse papier</span>
                 </button>
                 <input type="text" class="hidden" id="acturl" maxlength="1024">
-                <button class="button--success tooltip" onclick="MM.copyURLtoHistory(); AnnonceHistorique()">Ajouter à l'historique
+                <button class="button--success tooltip" onclick="MM.copyURLtoHistory(); alert(`Activité ajoutée à l'historique`)">Ajouter à l'historique
                 <span class="tooltiptext">Copie la sélection<br>dans l'historique</span>
-                <script>
-                    function AnnonceHistorique() {
-                        var TH = document.getElementById("ToastHistory")
-                        TH.style.display("block")
-                    }
-                </script>
                 </button>
-                <div class="ToastHistory" id="ToastHistory">
-                    <h3>L'activité a été copiée dans l'historique</h3>
-                    <a id="LinkTH" onclick="Close()">Fermer</a>
-                    <script>
-                        function Close() {
-                            TH.style.display("none")
-                        }
-                    </script>
-                </div>
                 <!--<button class="button--success tooltip" onclick="MM.generateCode();">Codes élève
                     <span class="tooltiptext">Génère plusieurs <b>codes</b><br>élèves pour répondre en ligne</span>
                 </button>-->
