Améloiration UI/UX
-Implantation progressive de la librairie d'icones Bootstrap

--- a/diaporama.html
+++ b/diaporama.html
@@ -14,9 +14,9 @@
     <body>
         <div id="slideshow-container" class="hidden">
             <header>
-                <button title="Tout arrêter" id="stop-all" onclick="MM.stopAllSliders()"><img src="img/slider-stop.png"></button>
-                <button title="Tout mettre en pause" id="pause-all" onclick="MM.pauseAllSliders();"><img src="img/slider-pause.png"></button>
-                <button title="Passer à la suivante pour tous" id="next-all" onclick="MM.nextAllSliders()"><img src="img/slider-next.png"></button>
+              <button title="Tout arrêter" id="stop-all" onclick="MM.stopAllSliders()"><h1><i class="bi bi-stop-btn-fill"></i></h1><!--<img alt="Stop" src="img/slider-stop.png">--></button>
+              <button title="Tout mettre en pause" id="pause-all" onclick="MM.pauseAllSliders();"><h1><i class="bi bi-pause-btn-fill"></i></h1><span style="display: none;"><img alt="Pause" src="img/slider-pause.png"></span></button>
+              <button title="Passer à la suivante pour tous" id="next-all" onclick="MM.nextAllSliders()"><h1><i class="bi bi-skip-end-btn-fill"></i></h1><!--<img alt="Next" src="img/slider-next.png">--></button>
             </header>
             <section id="slideshow"></section>
         </div>
